--- a/home2/homes.html
+++ b/home2/homes.html
@@ -78,7 +78,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <!-- Second Photo Grid-->
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
-        <img src="IMG/alien mockup.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
+        <img src="img/alien mockup.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Theme</b></p>
           <p>Alien</p>
